--- a/resource/css/search.css
+++ b/resource/css/search.css
@@ -964,6 +964,61 @@ footer,p,.fa-copyright{
   position: fixed;
 }
 
+.request-form-card {
+  background-color: #E3E3E3; 
+  padding: 30px;
+  border-radius: 10px;
+  /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); */
+}
+
+.form-control{
+  border: 1px solid #000000;
+  box-shadow: -4px 4px 4px 0px #00000040;
+
+}
+.request-details-title {
+  color: #161542; 
+  font-weight: bold;
+}
+
+.request-item-card {
+  background-color: transparent;
+  border: none;
+  padding: 0;
+  box-shadow: none;
+  justify-content: flex-start;
+}
+
+.item-details-simple {
+  display: flex;
+  align-items: center;
+}
+
+.item-name {
+  color: #161542;
+  font-weight: 500;
+  margin: 0;
+  font-size: 1rem;
+}
+
+.request-item-btn {
+  background-color: #f0f8ff;
+  color: #F55197;
+  border: 1px;
+  padding: 10px 30px;
+  border-radius: 15px;
+  font-weight: bold;
+  box-shadow: -4px 4px 4px 0px #00000040;
+  transition: all 0.3s ease;
+}
+
+.request-item-btn:hover,
+.request-item-btn:active{
+  background-color: #F55197;
+  color: #fff;
+  transform: translateY(-2px);
+  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
+}
 
 
 
