--- a/resource/css/search.css
+++ b/resource/css/search.css
@@ -14,6 +14,17 @@ body{
   font-family: 'Montserrat';
 }
 
+/* SCROLLBAR */
+::-webkit-scrollbar{
+	width: 5px;
+}
+::-webkit-scrollbar-track{
+	background-color: #020c1b;
+}
+::-webkit-scrollbar-thumb{
+	background-color: #3F3F3B;
+}
+
 .ceu-logo{
   width: 250px;
   height: auto;
