--- a/resource/css/home-admin.css
+++ b/resource/css/home-admin.css
@@ -30,21 +30,13 @@ body {
   width: 250px;
   height: auto;
 }
-.offcanvas-body, .offcanvas-header{
-  background-color: #161542;
-  color: white;
-}
-.navbar{
-  background: var(--CEU-Dark-Blue, #161542);
-}
 
-.home-admin .navbar-nav {
-  display: flex;    
+.navbar{
+    background: var(--CEU-Dark-Blue, #161542);
 }
 .custom-toggler {
-  border: none;
+    border: none;
 }
-
 .custom-toggler:focus,
 .custom-toggler:active,
 .custom-toggler:focus-visible {
@@ -55,37 +47,38 @@ body {
 .custom-toggler .navbar-toggler-icon {
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='white' stroke-width='3.5' stroke-linecap='round' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
 }
-
 /* make the offcanvas smaller */
 #offcanvasNavbar {
   width: 210px;   
-  height: 350px;
+  height: 500px;
   text-transform: uppercase;
   border-radius: 20px ; 
   overflow: hidden;
   font-size: 90%;
   padding-top: 0px;
   letter-spacing: 1px;
+  /* transition: 0.3s; */
   font-size: 18px;
   margin-right: 20px;
 }
-
 .offcanvas-title{
   font-weight: bold;
   color: #F55197;
+  /* text-transform: uppercase; */
   letter-spacing: 1px;
 }
-
 #offcanvasNavbar .offcanvas-body, 
 #offcanvasNavbar .offcanvas-header {
   background-color: #161542;
   color: white;
 }
-
 .nav-item:hover {
   border-bottom: 2px solid #F55197;
 }
-
+.navbar-nav .nav-item .nav-link.active,
+.navbar-nav .nav-item .nav-link.show {
+  font-weight: bold;
+}
 .right-side-icons {
   display: flex;
   align-items: center;
