--- a/resource/css/search.css
+++ b/resource/css/search.css
@@ -771,9 +771,49 @@ footer,p,.fa-copyright{
 }
 
 .button-container {
-  /* text-align: center; */
-  width: 100%; 
-  /* margin-top: 20px;/ */
+    display: flex;
+    justify-content: center;
+    gap: 15px;               
+    margin-top: 20px;
+}
+
+.edit-button {
+  background-color: #F0F8FF;
+  color: #F55197;
+  padding: 12px 30px;
+  border: none;
+  border-radius: 8px;
+  font-size: 1.2rem;
+  font-weight: bold;
+  cursor: pointer;
+  transition: background-color 0.3s ease, color 0.3s ease;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+  margin-bottom: 10px;
+  /* Removed width: 250px; because flexbox handles the sizing */
+}
+
+.edit-button:hover {
+  background-color: #F55197;
+  color: #F0F8FF;
+}
+.delete-button {
+  background-color: #F0F8FF;
+  color: #F55197;
+  padding: 12px 30px;
+  border: none;
+  border-radius: 8px;
+  font-size: 1.2rem;
+  font-weight: bold;
+  cursor: pointer;
+  transition: background-color 0.3s ease, color 0.3s ease;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+  margin-bottom: 10px;
+  /* Removed width: 250px; because flexbox handles the sizing */
+}
+
+.delete-button:hover {
+  background-color: #F55197;
+  color: #F0F8FF;
 }
 
 /* Quantity Controls */
