--- a/resource/css/home-admin.css
+++ b/resource/css/home-admin.css
@@ -120,7 +120,7 @@ main {
   justify-content: center; 
   gap: 10px; 
   margin-bottom: 30px;
-
+  
 }
 .filter-btn {
   background-color: #F0F8FF;
@@ -133,6 +133,7 @@ main {
   box-shadow: -4px 4px 4px 0px #00000040; 
   transition: all 0.3s ease; 
   white-space: nowrap; 
+  text-decoration: none;
 }
 
 .filter-btn:hover {
