--- a/resource/css/search.css
+++ b/resource/css/search.css
@@ -1,13 +1,15 @@
 * {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-html{
-	text-rendering: optimizeLegibility;
-	scroll-behavior: smooth;
+
+html {
+  text-rendering: optimizeLegibility;
+  scroll-behavior: smooth;
 }
-body{
+
+body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
@@ -15,28 +17,34 @@ body{
 }
 
 /* SCROLLBAR */
-::-webkit-scrollbar{
-	width: 5px;
-}
-::-webkit-scrollbar-track{
-	background-color: #020c1b;
-}
-::-webkit-scrollbar-thumb{
-	background-color: #3F3F3B;
+::-webkit-scrollbar {
+  width: 5px;
 }
 
-.ceu-logo{
+::-webkit-scrollbar-track {
+  background-color: #020c1b;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #3F3F3B;
+}
+
+.ceu-logo {
   width: 250px;
   height: auto;
 }
-.offcanvas-body, .offcanvas-header{
+
+.offcanvas-body,
+.offcanvas-header {
   background-color: #161542;
   color: white;
 }
-.navbar{
+
+.navbar {
   background: var(--CEU-Dark-Blue, #161542);
 
 }
+
 .custom-toggler {
   border: none;
 }
@@ -48,16 +56,17 @@ body{
   box-shadow: none;
   outline: none;
 }
+
 .custom-toggler .navbar-toggler-icon {
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='white' stroke-width='3.5' stroke-linecap='round' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
 }
 
 /* make the offcanvas smaller */
 #offcanvasNavbar {
-  width: 210px;   
+  width: 210px;
   height: 500px;
   text-transform: uppercase;
-  border-radius: 20px ; 
+  border-radius: 20px;
   overflow: hidden;
   font-size: 90%;
   padding-top: 0px;
@@ -67,14 +76,14 @@ body{
   margin-right: 20px;
 }
 
-.offcanvas-title{
+.offcanvas-title {
   font-weight: bold;
   color: var(--primary-color);
   /* text-transform: uppercase; */
   letter-spacing: 1px;
 }
 
-#offcanvasNavbar .offcanvas-body, 
+#offcanvasNavbar .offcanvas-body,
 #offcanvasNavbar .offcanvas-header {
   background-color: #161542;
   color: white;
@@ -97,7 +106,7 @@ body{
 
 :root {
   --body-color: #FFF;
-  --sidebar-color:  #E4E9F7;
+  --sidebar-color: #E4E9F7;
   --primary-color: #F55197;
   --primary-color-light: #F6F5FF;
   --toggle-color: #DDD;
@@ -119,29 +128,33 @@ body {
 
 /* needs to be adjusted in cp view */
 /* main and the main prob */
-.sidebar{ 
+.sidebar {
   position: fixed;
-    top: 0;
-    left: 0;
-    height: 100%; /* Change to 100% to fill the entire height of the viewport */
-    width: 280px;
-    background: var(--sidebar-color);
-    border-right: #DDD 1px solid;
-    transition: all 0.4s ease; /* Add transition for smooth animation */
-    z-index: 999
+  top: 0;
+  left: 0;
+  height: 100%;
+  /* Change to 100% to fill the entire height of the viewport */
+  width: 280px;
+  background: var(--sidebar-color);
+  border-right: #DDD 1px solid;
+  transition: all 0.4s ease;
+  /* Add transition for smooth animation */
+  z-index: 999
 }
 
-.sidebar.close{
+.sidebar.close {
   width: 100px;
 }
-.sidebar.close .text{
+
+.sidebar.close .text {
   opacity: 0;
 }
 
-.sidebar header{
+.sidebar header {
   position: relative;
 }
-.sidebar header .toggle{
+
+.sidebar header .toggle {
   position: absolute;
   top: 10%;
   transform: translateY(100%);
@@ -158,14 +171,15 @@ body {
   justify-content: center;
   color: var(--body-color);
 }
-.sidebar header .toggle:hover{
+
+.sidebar header .toggle:hover {
   background: #fc2783;
   color: var(--body-color);
   transition: var(--tran-04);
   box-shadow: 0 5px 6px rgba(0, 0, 0, 0.15);
 }
 
-.sidebar li{
+.sidebar li {
   height: 40px;
   /* background: red; */
   margin: 20px 15px;
@@ -176,7 +190,7 @@ body {
 
 .menu-bar ul {
   padding-left: 0;
-  margin-left: 0;    
+  margin-left: 0;
 }
 
 .menu-bar ul {
@@ -184,7 +198,7 @@ body {
 }
 
 
-.sidebar li .icon{
+.sidebar li .icon {
   min-width: 60px;
   display: flex;
   align-items: center;
@@ -197,7 +211,7 @@ body {
   -webkit-text-fill-color: transparent;
 }
 
-.sidebar .text{
+.sidebar .text {
   text-transform: uppercase;
   font-weight: bold;
   transition: var(--tran-03);
@@ -205,24 +219,24 @@ body {
 }
 
 .sidebar li .icon,
-.sidebar li .text{
+.sidebar li .text {
   transition: var(--tran-02);
 }
 
-.sidebar .search-box{
-  background:var(--primary-color-light);
-  border-radius:15px;
+.sidebar .search-box {
+  background: var(--primary-color-light);
+  border-radius: 15px;
 }
 
-.search-box input{
+.search-box input {
   width: 170%;
   height: 40%;
   outline: none;
-  border:none;
-  background:var(--primary-color-light);
+  border: none;
+  background: var(--primary-color-light);
 }
 
-.sidebar li a{
+.sidebar li a {
   height: 100%;
   display: flex;
   align-items: center;
@@ -231,7 +245,7 @@ body {
 }
 
 
-.sidebar .nav-links:hover{
+.sidebar .nav-links:hover {
   background: linear-gradient(135deg, #FF6BFC 0%, #7FF5FF 100%);
   border-radius: 10px;
 }
@@ -246,7 +260,7 @@ body {
 /* The button's normal state */
 .sidebar .chemicals-btn {
   background-color: #f0f8ff;
-  border-radius: 20px; 
+  border-radius: 20px;
   padding: 10px 0px;
   display: flex;
   align-items: center;
@@ -257,7 +271,7 @@ body {
 
 .sidebar .chemicals-btn:hover {
   background: linear-gradient(135deg, #FF6BFC 0%, #7FF5FF 100%);
-  border-radius: 20px; 
+  border-radius: 20px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
   transform: translateY(-2px);
 }
@@ -268,19 +282,20 @@ body {
 }
 
 .sidebar .bottom-content:hover .icon {
-  filter: brightness(0) invert(1); /
+  filter: brightness(0) invert(1);/
 }
+
 .sidebar .bottom-content:hover .icon,
 .sidebar .bottom-content:hover .nav-text {
   color: #ffffff !important;
 }
 
 .sidebar .chemicals-btn:hover .icon {
-  filter: brightness(0) invert(1); /
+  filter: brightness(0) invert(1);/
 }
 
 
-.sidebar .menu-bar{
+.sidebar .menu-bar {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -293,27 +308,27 @@ body {
 /* card */
 
 .card {
-  position: relative;  
+  position: relative;
   height: 18rem;
-  background-color: #F0F8FF; 
-  border-radius: 12px;      
-  border: 1px solid #E3E3E3;   
-  box-shadow: -4px 4px 4px 0px rgba(110,110,110,0.57);
-  transition: all 0.3s ease-in-out; 
-  cursor: pointer; 
+  background-color: #F0F8FF;
+  border-radius: 12px;
+  border: 1px solid #E3E3E3;
+  box-shadow: -4px 4px 4px 0px rgba(110, 110, 110, 0.57);
+  transition: all 0.3s ease-in-out;
+  cursor: pointer;
 }
 
 
 .card:hover {
-  transform: translateY(-8px) scale(1.03); 
-  box-shadow: 0px 8px 16px rgba(22, 21, 66, 0.4); 
+  transform: translateY(-8px) scale(1.03);
+  box-shadow: 0px 8px 16px rgba(22, 21, 66, 0.4);
   border: #F55197 5px solid;
-  border-radius: 19px; 
+  border-radius: 19px;
 }
 
 .card-img-top {
   height: 13rem;
-  width: 100%;       
+  width: 100%;
   object-fit: cover;
   border-radius: 12px 12px 0 0;
   transition: transform 0.4s ease-in-out;
@@ -324,8 +339,9 @@ body {
   box-shadow: 0px 8px 18px rgba(22, 21, 66, 0.5);
   border-color: #F55197;
 }
+
 .card:hover {
-  transform: translateY(-8px) scale(1.03); 
+  transform: translateY(-8px) scale(1.03);
   margin: 1px;
 }
 
@@ -335,7 +351,8 @@ body {
 
 .card:hover .info {
   opacity: 1;
-  transform: translate(-50%, -50%) scale(1); /* centered + zoom in */
+  transform: translate(-50%, -50%) scale(1);
+  /* centered + zoom in */
 }
 
 .card::before {
@@ -356,18 +373,18 @@ body {
 /*  */
 
 .card .info {
-  position: absolute;  
+  position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%) scale(0.9); 
+  transform: translate(-50%, -50%) scale(0.9);
   z-index: 3;
   color: white;
   opacity: 0;
   transition: 0.5s;
   text-align: center;
   display: flex;
-  flex-direction: column;  
-  gap: 10px;               
+  flex-direction: column;
+  gap: 10px;
 }
 
 .card .info button {
@@ -378,7 +395,7 @@ body {
   font-weight: bold;
   cursor: pointer;
   transition: 0.4s ease;
-  white-space: nowrap;  
+  white-space: nowrap;
   text-align: center;
 }
 
@@ -388,6 +405,7 @@ body {
   background: #F0F8FF;
   color: #F55197;
 }
+
 .card .info .btn-request:hover {
   background: #F55197;
   color: #F0F8FF;
@@ -397,31 +415,33 @@ body {
   background: #F0F8FF;
   color: #F55197;
 }
+
 .card .info .btn-view:hover {
   background: #F55197;
   color: #F0F8FF;
 }
 
 
-.content { 
-margin-left: 280px; 
-padding: 20px; 
-} 
-
-.sidebar.close ~ .content {
-  margin-left: 120px; 
+.content {
+  margin-left: 280px;
+  padding: 20px;
 }
 
-.card-text{
+.sidebar.close~.content {
+  margin-left: 120px;
+}
+
+.card-text {
   color: #F55197;
   font-weight: bold;
   transition: color 0.3s ease-in-out;
 }
+
 .card:hover .card-text {
   font-weight: bolder;
 }
 
-.stock-text{
+.stock-text {
   color: #161542;
   font-weight: bold;
 }
@@ -429,20 +449,23 @@ padding: 20px;
 
 
 /* footer */
-.container{
+.container {
   padding-bottom: 50px;
 }
 
 main {
   flex-grow: 1;
 }
+
 footer {
   background-color: #161542;
   z-index: 999;
 }
 
-footer,p,.fa-copyright{
- font-size: 0.7rem;
+footer,
+p,
+.fa-copyright {
+  font-size: 0.7rem;
 
 }
 
@@ -541,8 +564,8 @@ footer,p,.fa-copyright{
 
 .edit-button-container {
   display: flex;
-  justify-content: center; 
-  gap: 10px; 
+  justify-content: center;
+  gap: 10px;
 }
 
 .edit-button {
@@ -564,6 +587,7 @@ footer,p,.fa-copyright{
   background-color: #F55197;
   color: #F0F8FF;
 }
+
 .delete-button {
   background-color: #F0F8FF;
   color: #F55197;
@@ -604,6 +628,7 @@ footer,p,.fa-copyright{
   text-align: left;
   line-height: 1.1;
 }
+
 #equipment-popup .equipment-title,
 #equipment-popup .reservation-title {
   font-size: 1.7rem;
@@ -613,11 +638,11 @@ footer,p,.fa-copyright{
 }
 
 
-#equipment-popup .equip-title { 
-  color: #161542; 
-  font-weight:bolder;
+#equipment-popup .equip-title {
+  color: #161542;
+  font-weight: bolder;
   font-size: 1.5rem;
-  margin: 0; 
+  margin: 0;
 }
 
 #equipment-popup .stock-info {
@@ -646,13 +671,13 @@ footer,p,.fa-copyright{
 }
 
 #chemical-popup .popup-content {
-  width: 550px; 
-  padding: 30px; 
+  width: 550px;
+  padding: 30px;
   background-color: #E3E3E3;
 }
 
 #chemical-popup .popup-image-container {
-  height: 200px; 
+  height: 200px;
   overflow: hidden;
   border-radius: 8px;
   margin-bottom: 20px;
@@ -660,20 +685,20 @@ footer,p,.fa-copyright{
 
 #chemical-popup .popup-image {
   width: 100%;
-  height: 100%; 
+  height: 100%;
   object-fit: cover;
 }
 
 #chemical-popup .chemical-info-header {
   display: flex;
   justify-content: space-between;
-  align-items: baseline; 
-  margin-bottom: 20px; 
+  align-items: baseline;
+  margin-bottom: 20px;
 }
 
 #chemical-popup .chemical-titles {
   text-align: left;
-  line-height: 1.1; 
+  line-height: 1.1;
   color: #F55197;
 }
 
@@ -687,25 +712,26 @@ footer,p,.fa-copyright{
 #chemical-popup .chemical-title {
   font-size: 1.5rem;
   font-weight: bold;
-  margin: 0; 
+  margin: 0;
   text-align: left;
 }
 
-.chem-title { 
-  color: #161542; 
+.chem-title {
+  color: #161542;
   font-weight: bold;
   font-size: 1.7rem;
-  margin: 0; 
+  margin: 0;
 }
 
 #chemical-popup .stock-info {
-  font-size: 1.3rem; 
+  font-size: 1.3rem;
   font-weight: bold;
   color: #161542;
-  margin-left: 0; 
+  margin-left: 0;
   white-space: nowrap;
-  text-align: right; 
+  text-align: right;
 }
+
 #chemical-popup .request-button-container {
   margin-top: 30px;
 }
@@ -719,32 +745,34 @@ footer,p,.fa-copyright{
   height: 350px;
 
 }
-.offcanvas-body, .offcanvas-header {
+
+.offcanvas-body,
+.offcanvas-header {
   background-color: #161542;
   color: white;
 }
 
 .admin-page .navbar-nav {
-  display: flex; 
+  display: flex;
 }
 
 /* Replace your old .edit-popup rule with this block */
 .edit-popup {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.6);
-    z-index: 1000;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
-    /* Hidden by default for smooth animation */
-    opacity: 0;
-    visibility: hidden;
-    transition: opacity 0.3s ease, visibility 0s 0.3s;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  z-index: 1000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  /* Hidden by default for smooth animation */
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.3s ease, visibility 0s 0.3s;
 }
 
 /* This makes the popup visible when the script adds the .show class */
@@ -756,7 +784,7 @@ footer,p,.fa-copyright{
 
 /* This adds the subtle zoom effect to the content box */
 .edit-popup.show .edit-popup-content {
-    transform: scale(1);
+  transform: scale(1);
 }
 
 /* Base style for the content box inside the popup */
@@ -770,7 +798,7 @@ footer,p,.fa-copyright{
   border-radius: 10px;
   position: relative;
   text-align: center;
-  transform: scale(0.95); 
+  transform: scale(0.95);
   transition: transform 0.3s ease;
 }
 
@@ -807,11 +835,11 @@ footer,p,.fa-copyright{
   margin-right: 10px;
 }
 
-#edit-chemical-stock-unit{
+#edit-chemical-stock-unit {
   height: 40px;
 }
 
-.btn-button{
+.btn-button {
   margin-right: 10px;
 }
 
@@ -819,14 +847,15 @@ footer,p,.fa-copyright{
   display: flex;
   gap: 10px;
 }
+
 .stock-input-group input,
 .stock-input-group select {
-  flex-grow: 1; 
+  flex-grow: 1;
 }
 
 .button-container {
   /* text-align: center; */
-  width: 100%; 
+  width: 100%;
   /* margin-top: 20px;/ */
 }
 
@@ -870,9 +899,10 @@ footer,p,.fa-copyright{
   border: 1px solid #ccc;
   font-size: 1.2em;
   padding: 5px 0;
-  -moz-appearance: textfield; 
+  -moz-appearance: textfield;
 
 }
+
 /* Hide arrows for Chrome, Safari, Edge */
 .quantity-input::-webkit-outer-spin-button,
 .quantity-input::-webkit-inner-spin-button {
@@ -888,7 +918,7 @@ footer,p,.fa-copyright{
 }
 
 .nav--button {
-  position: fixed; 
+  position: fixed;
   bottom: 50px;
   right: 50px;
   height: 70px;
@@ -907,7 +937,7 @@ footer,p,.fa-copyright{
 .nav--button:hover span,
 .nav--button:hover span::before,
 .nav--button:hover span::after {
-  background-color: #F55197; 
+  background-color: #F55197;
 }
 
 .nav--button span {
@@ -942,23 +972,23 @@ footer,p,.fa-copyright{
 }
 
 /* Transform the lines into a checkmark on click */
-.nav--checkbox:checked + .nav--button span {
+.nav--checkbox:checked+.nav--button span {
   background-color: transparent;
 }
 
-.nav--checkbox:checked + .nav--button span::before {
+.nav--checkbox:checked+.nav--button span::before {
   top: 0;
   transform: rotate(45deg);
 }
 
-.nav--checkbox:checked + .nav--button span::after {
+.nav--checkbox:checked+.nav--button span::after {
   top: 0;
   transform: rotate(-45deg);
 }
 
 /* Small buttons */
 .nav--small {
-  position: fixed; 
+  position: fixed;
   bottom: 65px;
   right: 65px;
   height: 40px;
@@ -977,7 +1007,7 @@ footer,p,.fa-copyright{
   border-radius: inherit;
   text-decoration: none;
   color: white;
-  transition: color 0.3s ease; 
+  transition: color 0.3s ease;
 }
 
 .nav--small a i {
@@ -1016,34 +1046,37 @@ footer,p,.fa-copyright{
 } */
 
 /* When checked */
-.nav--checkbox:checked ~ .nav--btn-1 {
+.nav--checkbox:checked~.nav--btn-1 {
   bottom: 135px;
   position: fixed;
 }
-.nav--checkbox:checked ~ .nav--btn-2 {
+
+.nav--checkbox:checked~.nav--btn-2 {
   bottom: 118px;
   right: 118px;
   position: fixed;
 }
-.nav--checkbox:checked ~ .nav--btn-3 {
+
+.nav--checkbox:checked~.nav--btn-3 {
   right: 135px;
   position: fixed;
 }
 
 .request-form-card {
-  background-color: #E3E3E3; 
+  background-color: #E3E3E3;
   padding: 30px;
   border-radius: 10px;
   /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); */
 }
 
-.form-control{
+.form-control {
   border: 1px solid #000000;
   box-shadow: -4px 4px 4px 0px #00000040;
 
 }
+
 .request-details-title {
-  color: #161542; 
+  color: #161542;
   font-weight: bold;
 }
 
@@ -1079,7 +1112,7 @@ footer,p,.fa-copyright{
 }
 
 .request-item-btn:hover,
-.request-item-btn:active{
+.request-item-btn:active {
   background-color: #F55197;
   color: #fff;
   transform: translateY(-2px);
@@ -1092,8 +1125,5 @@ footer,p,.fa-copyright{
   .admin-page .offcanvas {
     display: none;
   }
-  
+
 }
-
-
-
