made the ad-order-details.php dynamic and working.

--- a/resource/css/home-admin.css
+++ b/resource/css/home-admin.css
@@ -272,6 +272,8 @@ main {
   box-shadow: -2px 2px 4px rgba(0, 0, 0, 0.2);
   transition: background-color 0.3s, color 0.3s;
   white-space: nowrap;
+  text-decoration: none;
+  text-align: center;
 }
 
 .cancel-button:hover,
